--- a/lloc web/index.html
+++ b/lloc web/index.html
@@ -14,13 +14,9 @@
         <li><a href="armas.html">Armas</a></li>
         <li><a href="mapas.html">Mapas</a></li>
     </ul>
-    <video class="video" autoplay muted>
-        <source src="multimedia/Counter-Strike Global Offensive Trailer - Valve (1080p, h264).mp4" type="video/mp4">
+    <img src="multimedia/wp9407635-counter-strike-4k-wallpapers.png" alt="Counter-Strike" class="fons"></img>
 
     <h2 id="historia">INTRODUCCIÓ</h2>
-
-    <p>Counter-Strike és molt més que un videojoc: és una llegenda del món dels shooters en primera persona. Des del seu llançament original com a mod de Half-Life, ha captivat milions de jugadors amb la seva a
-
 </p>
 </body>
 </html>
