--- a/lloc web/index.html
+++ b/lloc web/index.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <br><br>
-    <h1>COUNTER STRIKE</h1>
-    <ul>
-        <li><a href="historia.html">Historia</a></li>
-        <li><a href="armas.html">Armas</a></li>
-        <li><a href="mapas.html">Mapas</a></li>
+<body class="index">
+    <h1 class="h1-index">COUNTER STRIKE</h1>
+    <ul class="menu-index">
+        <li><a class="boto-mapa" href="mapas.html">MAPA</a></li>
+        <li><a class="boto-historia" href="historia.html">HISTORIA</a></li>
+        <li><a class="boto-armas" href="armas.html">ARMES</a></li>
     </ul>
     <img src="multimedia/wp9407635-counter-strike-4k-wallpapers.png" alt="Counter-Strike" class="fons"></img>
 
-    <h2 id="historia">INTRODUCCIÓ</h2>
 </p>
 </body>
 </html>
