--- a/lloc web/historia.html
+++ b/lloc web/historia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
 </head>
-<body>
+<body class="hisotria">
     <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="armas.html">Armas</a></li>
