--- a/lloc web/mapas.html
+++ b/lloc web/mapas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="mapas">
     <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="armas.html">Armas</a></li>
