--- a/lloc web/armas.html
+++ b/lloc web/armas.html
@@ -8,12 +8,57 @@
 </head>
 <body class="armas">
     <ul>
-        <li><a href="index.html">Inici</a></li>
-        <li><a href="historia.html">Historia</a></li>
+        <li><a href="index.html">INICI</a></li>
+        <li><a href="personatges.html">PERSONATGES</a></li>
         <li><a href="mapas.html">Mapas</a></li>
     </ul>
     <BR></BR>
     <h1>ARMAS</h1>
-    
+
+    <h3>PISTOLES</h3>
+
+    <div class="pistoles-contenidor">
+        <div class="pistoles-grid">
+            <h4>CLASSIC</h4>
+            <p>CREDITS: 0</p>
+        </div>
+        <div class="pistoles-grid">SHORTY</div>
+        <div class="pistoles-grid">FREENZY</div>
+        <div class="pistoles-grid">GHOST</div>
+        <div class="pistoles-grid">SHERIFF</div>
+    </div>
+
+    <h3>SUBFUSILS</h3>
+    <div class="subfusil-contenidor">
+        <div class="subfusil-grid">STINGER</div>
+        <div class="subfusil-grid">SPECTRE</div>
+    </div>
+
+    <h3>ESCOPETES</h3>
+    <div class="escopetes-contenidor">
+        <div class="escopetes-grid">BUCKY</div>
+        <div class="escopetes-grid">JUDGE</div>
+    </div>
+
+    <h3>FUSILS</h3>
+    <div class="fusils-contenidor">
+        <div class="fusils-grid">BULLDOG</div>
+        <div class="fusils-grid">GUARDIAN</div>
+        <div class="fusils-grid">PHANTOM</div>
+        <div class="fusils-grid">VANDAL</div>
+    </div>
+
+    <h3>SNIPERS</h3>
+    <div class="snipers-contenidor">
+        <div class="snipers-grid">MARSHAL</div>
+        <div class="snipers-grid">OUTLAW</div>
+        <div class="snipers-grid">OPERATOR</div>
+    </div>
+
+    <h3>ARMES PESADES</h3>
+    <div class="armes-pesades-contenidor">
+        <div class="armes-pesades-grid">ARES</div>
+        <div class="armes-pesades-grid">ODIN</div>
+    </div>
 </body>
 </html>
