--- a/lloc web/index.html
+++ b/lloc web/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body class="index">
-    <h1 class="h1-index">COUNTER STRIKE</h1>
+    <h1 class="h1-index">VALORANT</h1>
     <ul class="menu-index">
-        <li><a class="boto-mapa" href="mapas.html">MAPA</a></li>
-        <li><a class="boto-historia" href="historia.html">HISTORIA</a></li>
+        <li><a class="boto-mapa" href="mapas.html">MAPES</a></li>
+        <li><a class="boto-historia" href="personatges.html">PERSONATGES</a></li>
         <li><a class="boto-armas" href="armas.html">ARMES</a></li>
     </ul>
-    <img src="multimedia/wp9407635-counter-strike-4k-wallpapers.png" alt="Counter-Strike" class="fons"></img>
+    <img src="multimedia/fons_valorant3.jpg" alt="Counter-Strike" class="fons"></img>
 
 </p>
 </body>
