--- a/lloc web/mapas.html
+++ b/lloc web/mapas.html
@@ -10,11 +10,105 @@
     <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="armas.html">Armas</a></li>
-        <li><a href="#mapas">Mapas</a></li>
+        <li><a href="personatges.html">Personatges</a></li>
     </ul>
     <br><br>
     <H1>MAPAS</H1>
-    <img src="https://static1-es.millenium.gg/articles/1/41/37/1/@/213885-dust2-vignette-orig-1-article_m-1.jpg" alt="">
-    
+    <div class="bind-contenidor">
+        <div class="text-bind">
+            <h3>BIND</h3>
+            <p>Bind és un mapa molt ràpid perquè no té Mid, així que els equips s’enfronten directament als dos bomb sites. Els teleportadors són el seu element clau i poden canviar el curs d’una ronda si s’utilitzen bé. Els angles i racons de cada site obliguen a estar sempre alerta i pensar en com entrar o defensar. És un mapa que et fa estar pendent del moviment de l’enemic i força a coordinar-te amb el teu equip constantment.</p>
+        </div>
+        <img class=bind src="/lloc web/multimedia/bind.png" alt="">    
+    </div>
+
+    <div class="ascent-contenidor">
+        <div class="text-ascent">
+            <h3>ASCENT</h3>
+            <p>Ascent és un mapa molt obert, amb un gran Mid que controla gairebé tota la partida. Si un equip aconsegueix dominar aquesta zona, té molt clar cap on atacar o defensar. Els bomb sites estan connectats amb passadissos i zones obertes, així que hi ha molts punts on poden caure emboscades. És un mapa on la paciència i la coordinació d’equip importen molt, i on una bona rotació pot decidir la ronda en un instant.</p>
+        </div>
+        <img class=ascent src="multimedia/ascent.webp" alt="">
+        </div>
+    </div>
+
+    <div class="split-contenidor">
+        <div class="text-split">
+            <h3>SPLIT</h3>
+            <p>Split és un mapa força vertical, amb molts punts elevats i zones estretes, especialment al Mid i al site B. Això fa que els combats siguin intenses i ràpids, i que les habilitats dels agents siguin molt importants per guanyar control. Els equips han d’estar molt pendents dels angles i coordinar les entrades, ja que una mala rotació pot deixar un site totalment desprotegit. És un mapa que exigeix pensar ràpid i moure’s amb precisió.</p>
+        </div>
+        <img class="split" src="multimedia/split.webp" alt="">
+    </div>
+
+    <div class="icebox-contenidor">
+        <img class=icebox src="multimedia/icebox.webp" alt="">
+        <div class="text-icebox">
+            <h3>ICEBOX</h3>
+            <p>Icebox és un mapa que combina zones obertes amb molts punts on amagar-se darrere de caixes i estructures. Els combats poden ser molt ràpids o tensos depenent de com els equips es posicionin. Controlar Mid et dóna avantatge per pressionar els dos bomb sites, però també hi ha moltes rutes alternatives per sorprendre l’enemic. En general, és un mapa que premia tant la creativitat com la coordinació amb l’equip.</p>
+        </div>
+    </div>
+
+    <div class="lotus-contenidor">
+        <div class="text-lotus">
+            <h3>LOTUS</h3>
+            <p>Lotus és un mapa molt colorit i amb tres bomb sites, cosa que fa que les rondes siguin molt imprevisibles. Té molts passadissos curts i zones obertes que permeten crear emboscades o sorprendre l’equip rival. Les rotacions són constants, així que cal estar atent al moviment de l’enemic i comunicar-se bé amb l’equip. És un mapa que et fa pensar en les estratègies abans de moure’t i recompensa els equips que treballen conjuntament.</p>
+        </div>
+        <img class="lotus" src="multimedia/lotus.webp" alt="">
+    </div>
+
+    <div class="sunset-contenidor">
+        <div class="text-sunset">
+            <h3>SUNSET</h3>
+            <p>Sunset és un mapa amb zones molt obertes i algunes esquines estretes que permeten fer emboscades ràpides. Els bomb sites estan ben connectats, així que les rotacions són constants i cal saber llegir la partida per no quedar-se exposat. És un mapa que combina combats ràpids amb moments on cal ser pacient i esperar la millor oportunitat per atacar o defensar. També premia molt la coordinació de l’equip i el control dels punts clau del mapa.</p>
+        </div>
+    <img class="sunset" src="multimedia/sunset.jpg" alt="">
+    </div>
+
+    <div class="abyss-contenidor">
+        <div class="text-abyss">
+            <h3>ABYSS</h3>
+            <p>Abyss és un mapa molt visual i amb un aire una mica misteriós. Els bomb sites són oberts, així que les batalles poden ser intenses i amb sorpreses. Hi ha zones amb plataformes i nivells diferents que permeten fer jugades originals si t’atreveixes. És un mapa que enganxa perquè cada ronda és diferent i sempre pots provar alguna cosa nova per pillar l’equip contrari desprevingut.</p>
+        </div>
+        <img class=abyss src="multimedia/abyss.webp" alt="">
+    </div>
+
+    <div class="fracture-contenidor">
+        <div class="text-fracture">
+            <h3>FRACTURE</h3>
+            <p>Fracture és un mapa diferent a la resta, amb zones molt originals i una estructura que fa que no sigui fàcil predir els moviments dels enemics. Té diversos punts per sorprendre l’equip rival i fer jugades creatives. El mapa combina espais oberts amb zones més tancades, així que cada partida pot ser molt variada. És divertit perquè obliga a improvisar i provar estratègies noves constantment.</p>
+        </div>
+        <img class="fracture" src="multimedia/fracture.png" alt="">
+    </div>
+
+    <div class="heaven-contenidor">
+        <div class="text-heaven">
+            <h3>HEAVEN</h3>
+            <p>Haven és un mapa caracteritzat per tenir tres bomb sites (A, B i C), fet que el converteix en un dels escenaris més dinàmics del joc. Aquesta estructura obliga els defensors a repartir-se més pel mapa i crea moltes opcions estratègiques per als atacants. El control del Mid és essencial, ja que permet accedir ràpidament a qualsevol punt i facilita les rotacions. Haven combina zones estretes amb espais oberts, fent-lo un mapa molt versàtil i ple d’oportunitats per a jugades creatives.</p>
+        </div>
+        <img class="heaven" src="multimedia/heaven.webp" alt="">
+    </div>
+
+    <div class="pearl-contenidor">
+        <div class="text-pearl">
+            <h3>PEARL</h3>
+            <p>Pearl és un mapa ambientat en una ciutat submergida i té dos bomb sites, A i B. Té passadissos bastant estrets i un Mid que és clau perquè connecta gairebé tot el mapa. Normalment les rondes es decideixen per qui controla aquesta zona. A Pearl hi ha molts angles i racons on et poden sorprendre, així que cal jugar amb cura i moure’s en equip. En general és un mapa bastant tàctic, però un cop l’hi agafes el punt, es fa molt entretingut de jugar.</p>
+        </div>
+        <img class="pearl" src="multimedia/pearl.webp" alt="">
+    </div>
+
+    <div class="breeze-contenidor">
+        <div class="text-breeze">
+            <h3>BREEZE</h3>
+            <p>Breeze és un mapa molt obert amb dues entrades grans a cada bomb site, així que és fàcil que l’equip defensor es vegi superat si no controla bé les distàncies. Té zones enormes com Mid i A Hall, on els duels solen ser llargs i les armes de llarga distància funcionen molt bé. També hi ha moltes rutes alternatives, així que és important comunicar-se per no quedar-se exposat. Al principi costa una mica adaptar-se als espais tan oberts, però quan t’hi acostumes és un mapa molt dinàmic i divertit de jugar.</p>
+        </div>
+        <img class="breeze" src="multimedia/breeze.jpg" alt="">
+    </div>
+
+    <div class="corrode-contenidor">
+        <div class="text-corrode">
+            <h3>CORRODE</h3>
+            <p>Corrode és un mapa bastant tancat amb passadissos estrets i moltes cantonades, així que acostuma a ser molt intens des del primer segon de ronda. El control de Mid és molt important perquè connecta ràpidament amb els dos bomb sites i permet rotacions molt ràpides. També té zones altes i baixes que obliguen a vigilar sempre diversos angles. En general, és un mapa on la comunicació i el timing són clau, i si l’equip sap coordinar-se pot treure molt d’avantatge.</p>
+        </div>
+        <img class="corrode" src="multimedia/corrode.webp" alt="">
+    </div>
 </body>
 </html>
